Fix bug hien thi sai so luong HD khi phan trang & Fix bug tai nhieu thanh cong sai so luong hien thi & them dieu kien check ky tu dac biet khi tao HD

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -602,7 +602,7 @@
         <div class="footer_contract_per_page">
             <div>Hiển thị&nbsp;</div>
             <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
-                <option value="" hidden>{{this.page}}</option>
+                <option value="" hidden>10</option>
                 <option *ngFor="let d of this.pageOptions">{{d}}</option>
             </select>
             <div>&nbsp;{{'contracts.per.page' | translate}}</div>
