--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -312,11 +312,16 @@
   text-align:center;
   margin-left: 5px;
   margin-right: 5px;
-  height: 25px;width: 35%; 
+  height: 25px;
+  width: 50px; 
   border-radius: 5px;
   border: 1px solid #0160AE;
 }
 
 .text-enterPage::placeholder {
   font-size: 10px;
+}
+
+.enterPage p {
+  margin-top: 2px
 }
