--- a/src/app/main/contract-folder/contract-folder.component.scss
+++ b/src/app/main/contract-folder/contract-folder.component.scss
@@ -300,6 +300,7 @@
 }
 
 .footer_pagination{
+  display: flex;
   text-align: center;
 }
 .footer_page_number{
@@ -344,7 +345,28 @@
   display: flex;
 }
 
+.enterPage {
+  display: flex;
+  margin-left: 10px
+}
 
+.enterPage input {
+  text-align:center;
+  margin-left: 5px;
+  margin-right: 5px;
+  height: 25px;
+  width: 50px; 
+  border-radius: 5px;
+  border: 1px solid #0160AE;
+}
+
+.text-enterPage::placeholder {
+  font-size: 10px;
+}
+
+.enterPage p {
+  margin-top: 2px
+}
   
 
 
