--- a/src/app/main/notification/notification.component.html
+++ b/src/app/main/notification/notification.component.html
@@ -51,6 +51,10 @@
       <div class="footer_title"></div>
       <div class="footer_pagination">
         <pagination-controls *ngIf="listNotification.length > 0;" (pageChange)="p=$event; getNotification()" previousLabel="" nextLabel=""></pagination-controls>
+        <div class="enterPage" *ngIf="pageTotal > 0">
+            <input class="text-enterPage" placeholder="{{'contract.enterPage' | translate}}" (keypress)="validateInput($event)" [(ngModel)]="enterPage" (input)="onInput($event)"/>
+            <p>của {{countPage()}} trang</p>
+        </div>
       </div>
       <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}</div>
     </div>
