--- a/src/app/main/notification/notification.component.scss
+++ b/src/app/main/notification/notification.component.scss
@@ -188,6 +188,7 @@
     width: 120px;
   }
   .footer_pagination{
+    display: flex;
     text-align: center;
   }
   .footer_page_number{
@@ -238,4 +239,25 @@
     width: 30px;
   }
   
+  .enterPage {
+    display: flex;
+    margin-left: 10px
+  }
   
+  .enterPage input {
+    text-align:center;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 25px;
+    width: 50px; 
+    border-radius: 5px;
+    border: 1px solid #0160AE;
+  }
+  
+  .text-enterPage::placeholder {
+    font-size: 10px;
+  }
+  
+  .enterPage p {
+    margin-top: 2px
+  }
