--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <nav id="sidebar" class="sidebar" [ngClass]="{'sidebar-bg' : hasBackgroundImage()}">
   <div class="sidebar-content">
     <perfect-scrollbar>
-      <div class="sidebar-header">
+      <!-- <div class="sidebar-header">
         <a (click)="openDashboard()">
           <img src="assets/img/logo_eContract_db.svg" alt="Logo" class="img-responsive" width="150px" height="auto" />
         </a>
-      </div>
+      </div> -->
 
       <div class="sidebar-menu">
         <ul>
@@ -48,25 +48,25 @@
           </li>
         </ul>
       </div>
-      <div class="sidebar-footer sidebar-footer-custom">
-        <div class="sidebar-footer-logo">
-          <div style="padding: 0; display: flex; align-items: center; vertical-align: middle">
-            <a (click)="openDashboard()">
-              <img src="assets/img/MBF_QuyChuanLogo_160219.svg" alt="Logo" class="img-responsive" width="130px" height="auto" style="vertical-align: middle;"/>
-            </a>
-          </div>
-          <div class="sidebar-footer-version">
-            <span class="sidebar-footer-version">
-              v1.16.1
-            </span>
-          </div>
-        </div>
-      </div>
       <!-- <div style="padding: 16px;">
         <img src="../../../assets/img/logo-mobifone.svg"/>
       </div> -->
     </perfect-scrollbar>
     
 
+  </div>
+  <div class="sidebar-footer-custom">
+    <div class="sidebar-footer-logo">
+      <div style="padding: 0; display: flex; align-items: center; vertical-align: middle;">
+        <a (click)="openDashboard()">
+          <img src="assets/img/MBF_QuyChuanLogo_160219.svg" alt="Logo" class="img-responsive" width="130px" height="auto" style="vertical-align: middle;"/>
+        </a>
+      </div>
+      <div class="sidebar-footer-version">
+        <span class="sidebar-footer-version">
+          v1.16.1
+        </span>
+      </div>
+    </div>
   </div>
 </nav>
