--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -322,3 +322,12 @@ h3{
   font-size: 20px;
   color:#106db6
 }
+
+.sidebar-header-custom {
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 59px;
+}
