--- a/src/app/main/role/detail-role/detail-role.component.scss
+++ b/src/app/main/role/detail-role/detail-role.component.scss
@@ -3,9 +3,32 @@
     font-weight: bold
 }
 .label-header{
-    color: #106DB6; 
-    font-family: inherit;
+    // color: #106DB6; 
+    // font-family: inherit;
     text-transform: uppercase;
+    color: #001A4D;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: -0.525px;
+}
+.label {
+    color: #2B3D60;
+    font-family: 'Roboto';
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+}
+.label_item {
+    color: #2B3D60;
+    font-family: 'Roboto';
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
 }
 .cancel-button{
     border: 0px;
@@ -14,7 +37,7 @@
     width: 100px;
     box-sizing: border-box;
     color: white;
-    background-color: #8B8B8B;
+    background-color: #8E9AB0;
     font-size: 13px;
     margin: 0 10px;
 }
