--- a/src/app/main/unit/add-unit/add-unit.component.scss
+++ b/src/app/main/unit/add-unit/add-unit.component.scss
@@ -3,9 +3,24 @@
     font-weight: bold
 }
 .label-header{
-    color: #106DB6; 
+    color: #001A4D; 
     font-family: inherit;
     text-transform: uppercase;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: -0.525px;
+}
+.input_header {
+    color: #001A4D;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 21px;
+    letter-spacing: -0.525px;
 }
 .required-title {
     color: red;
@@ -42,7 +57,8 @@
     width: 100px;
     box-sizing: border-box;
     color: white;
-    background-color: #8B8B8B;
+    // background-color: #8B8B8B;
+    background-color: #8E9AB0;
     font-size: 13px;
     margin: 0 10px;
 }
@@ -53,7 +69,7 @@
     width: 100px;
     box-sizing: border-box;
     color: white;
-    background-color: #106DB6;
+    background-color: #0041C4;
     font-size: 13px;
     margin: 0 10px;
 }
@@ -86,4 +102,10 @@
     background-color: #EFF2F5;
   }
   
-  
+.text-color {
+    color: #2B3D60;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px; /* 166.667% */
+}
