--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -1,12 +1,25 @@
 .btn_submit{
     border: 0px;
     border-radius: 5px;
-    height: 33px;
+    // height: 33px;
     box-sizing: border-box;
-    color: white;
-    background-color: #106DB6;
+    // color: white;
+    // background-color: #106DB6;
     font-size: 13px;
     margin: 0 10px;
+}
+
+.btn_submit_search {
+  height: 35px;
+  border: 1px solid rgba(0, 26, 77, 0.10);
+  color: #001A4D;
+  background-color: #FFF;
+}
+
+.btn_submit_add {
+  height: 33px;
+  color: #FFF;
+  background-color: #0041C4;
 }
 
 input[type="file"] {
@@ -17,11 +30,20 @@ input[type="file"] {
   border: 0px;
   border-radius: 5px;
   box-sizing: border-box;
-  background-color: #106DB6;
+  background-color: #0041C4;
   display: inline-block;
   padding: 6px 12px;
   cursor: pointer;
   margin-left: 55%;
+}
+
+::placeholder {
+  color: #8E9AB0;
+  opacity: 1; /* Firefox */
+}
+
+::-ms-input-placeholder { /* Edge 12 -18 */
+  color: #8E9AB0;
 }
 
 .input_text {
@@ -31,6 +53,7 @@ input[type="file"] {
     width: 100%;
     border-radius: 5px;
     border: 1px solid #106DB6;
+    background: #F1F5FE;
 }
 .btn_search{
     align-self: flex-end;
@@ -40,7 +63,8 @@ input[type="file"] {
   border-collapse: collapse;
   width: 100%;
   font-size: 13px;
-  font-family: font_lexend_deca;
+  font-family: 'Roboto';
+  // font-family: font_lexend_deca;`
 }
 #table td, #table th {
   //border: 1px solid #ddd;
@@ -49,12 +73,31 @@ input[type="file"] {
 
 #table tr:nth-child(even){background-color: #f2f2f2;}
 
-#table tr:hover {background-color: #ddd;}
+#table tr:hover, #table td:hover {background-color: #f2f2f2}
 
 #table th {
-  //text-align: center;
-  background-color: #E2ECF6;
-  color: #106DB6;
+  // text-align: center;
+  // background-color: #E2ECF6;
+  // color: #106DB6;
+  // text-align: left;
+  background: #EBF2FB;
+  color: #8E9AB0;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.525px;
+}
+
+.table_col_not_bold {
+  color: #001A4D;
+  font-family: 'Roboto';
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: -0.45px;
 }
 
 #table tr:last-child th:first-child {
